<resources>
    <string name="app_name">MyKtFirebaseStore</string>
    <string name="str_log_tag" translatable="false">tagInfo</string>

    <!-- Facebook application ID and custom URL scheme (app ID prefixed by 'fb'). -->
    <string name="facebook_application_id" translatable="false">YOUR_APP_ID</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fbYOUR_APP_ID</string>
    <!-- Twitter consumer key and secret -->
    <string name="twitter_consumer_key" translatable="false">YOUR_CONSUMER_KEY</string>
    <string name="twitter_consumer_secret" translatable="false">YOUR_CONSUMER_SECRET</string>

    <string-array name="test_array">
        <item>test 1</item>
        <item>test 2</item>
    </string-array>

    <string name="firebaseui_status_fmt" translatable="false">Firebase User: %s</string>
    <string name="id_fmt" translatable="false">User ID: %s</string>
    <string name="signed_out" translatable="false">Signed Out</string>
    <string name="desc_firebase_lockup" translatable="false">Firebase logo and name</string>
    <string name="firebaseui_title_text" translatable="false">FirebaseUI Auth</string>
    <string name="sign_in" translatable="false">Sign In</string>
    <string name="sign_out" translatable="false">Sign Out</string>
    <string name="hint_email" translatable="false">Email</string>
    <string name="hint_password" translatable="false">Password</string>
    <string name="create_account" translatable="false">Create Account</string>
    <string name="verify_email" translatable="false">Verify Email</string>
    <string name="auth_failed" translatable="false">Authentication failed</string>
    <string name="emailpassword_status_fmt" translatable="false">Email User: %1$s (verified: %2$b)</string>
    <string name="firebase_status_fmt" translatable="false">Firebase UID: %s</string>
    <string name="emailpassword_title_text" translatable="false">Email and Password</string>

    <string name="str_select_city">select a city</string>
    <string name="str_cities_array">cities_en</string>
    <string name="str_gen_sel_male">M</string>
    <string name="str_gen_sel_female">F</string>
    <string name="str_gen_sel_gay" translatable="false">G</string>
    <string name="str_gen_sel_lesbian" translatable="false">L</string>
    <string name="str_gen_sel_tom" translatable="false">T</string>
    <string name="str_gen_sel_queer" translatable="false">Q</string>
    <string name="str_gen_sel_bisex" translatable="false">B</string>
    <string name="str_gen_sel_other">other</string>
    <string name="str_rconfig_start_page" translatable="false">cities</string>
    <string name="face_title" translatable="false">select source</string>
    <string name="str_iv_content_desp" translatable="false">your face photo</string>
    <string name="str_name_or_nickname" translatable="false">write your name/nickname</string>
    <string name="str_select_birthday" translatable="false">select birthday</string>
    <string name="str_hint_language" translatable="false">write that those languages you can handle</string>
    <string name="str_hint_contury" translatable="false">which conturys did you stay usually?</string>
    <string name="str_edt_hint" translatable="false">descript yourself, who you are</string>
    <string name="google_storage_bucket_face_photos_dir" translatable="false">images/</string>
    <string name="str_date_format" translatable="false">yyyy/MM/dd</string>
    <string name="userinfo_var_title_name" translatable="false">name</string>
    <string name="userinfo_var_title_language" translatable="false">language</string>
    <string name="userinfo_var_title_country" translatable="false">country</string>
    <string name="userinfo_var_title_description" translatable="false">name</string>
    <string name="too_many_chatting_rooms" translatable="false">please remove some chatting rooms, because the rooms were meetting the upper bound(15)</string>
    <string name="str_unknown_er" translatable="false">something\'s wrong because of unknown reason</string>
</resources>
